new landing page

--- a/404.html
+++ b/404.html
@@ -80,23 +80,23 @@
             <li class="nav__item">
               <a
                 href="https://brodynewell.com/"
-                class="nav__link"
+                class="nav__link active-link"
                 aria-label="Home Tab"
                 >Home</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/about" class="nav__link" aria-label="About Tab"
+              <a href="https://about.brodynewell.com/" class="nav__link" aria-label="About Tab"
                 >About</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/resources" class="nav__link" aria-label="Resources Tab"
+              <a href="https://resources.brodynewell.com/" class="nav__link" aria-label="Resources Tab"
                 >Resources</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/games" class="nav__link" aria-label="Games Tab"
+              <a href="https://games.brodynewell.com/" class="nav__link" aria-label="Games Tab"
                 >Games</a
               >
             </li>
@@ -106,7 +106,7 @@
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/contact" class="nav__link" aria-label="Contact Tab"
+              <a href="https://contact.brodynewell.com/" class="nav__link" aria-label="Contact Tab"
                 >Contact</a
               >
             </li>
@@ -159,7 +159,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__container rd-container">
-        <h1 class="footer__title">Brody Newell</h1>
+        <h1 class="footer__title">.com</h1>
         <p class="footer__description">404</p>
         <p class="footer__copy">
           &#169 2021 
