--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/about" class="nav__link" aria-label="About Tab"
+              <a href="https://about.brodynewell.com/" class="nav__link" aria-label="About Tab"
                 >About</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/resources" class="nav__link" aria-label="Resources Tab"
+              <a href="https://resources.brodynewell.com/" class="nav__link" aria-label="Resources Tab"
                 >Resources</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/games" class="nav__link" aria-label="Games Tab"
+              <a href="https://games.brodynewell.com/" class="nav__link" aria-label="Games Tab"
                 >Games</a
               >
             </li>
@@ -106,7 +106,7 @@
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/contact" class="nav__link" aria-label="Contact Tab"
+              <a href="https://contact.brodynewell.com/" class="nav__link" aria-label="Contact Tab"
                 >Contact</a
               >
             </li>
@@ -124,17 +124,16 @@
       <section class="home" id="home">
         <div class="home__container rd-container rd-grid">
           <div class="home__data">
-            <span class="home__greeting">Hello, My name is</span>
-            <h1 class="home__name">Brody Newell</h1>
-            <span class="home__profession">Home</span>
+            <span class="home__greeting">brodynewell.com</span>
+            <h1 class="home__name">Home</h1>
             <a
-              href="https://brodynewell.com/resources"
+              href="https://resources.brodynewell.com/"
               class="button home__button"
               aria-label="Resources"
               >Resources</a
             >
             <a
-              href="https://brodynewell.com/projects"
+              href="https://projects.brodynewell.com/"
               class="button home__button"
               aria-label="Projects"
               >Projects</a
@@ -190,7 +189,7 @@
             <p class="services__description">
               Check this page out to learn all about me! That's really all there is to this page.
             </p>
-            <a href="https://brodynewell.com/about" class="button services__button">View</a>
+            <a href="https://about.brodynewell.com/" class="button services__button">View</a>
           </div>
           <div class="services__data">
             <i class="bx bx-pencil services__icon"></i>
@@ -198,16 +197,16 @@
             <p class="services__description">
               I have many resources for classes you might have. From a scientific calculator to Quizlet sets, there are a range of resources for you to use. I add more all the time.
             </p>
-            <a href="https://brodynewell.com/resources" class="button services__button">View</a>
+            <a href="https://resources.brodynewell.com/" class="button services__button">View</a>
           </div>
 
           <div class="services__data">
             <i class="bx bx-game services__icon"></i>
             <h3 class="services__title">Games</h3>
             <p class="services__description">
-              Feeling bored? I got you covered. There are TONS of games to choose from. I have Tetris, Snake, UNO, and even... a chat box?
+              Feeling bored? I got you covered. There are TONS of games to choose from. I have Golf, Tetris, Snake, UNO, and even... a chat box?
             </p>
-            <a href="https://brodynewell.com/games" class="button services__button">View</a>
+            <a href="https://games.brodynewell.com/" class="button services__button">View</a>
           </div>
 
           <div class="services__data">
@@ -216,16 +215,16 @@
             <p class="services__description">
               I created a few projects in the past, along with some I'm working on right now! Come here to view the ones in progress. You might also find PC games I'm working on.
             </p>
-            <a href="https://brodynewell.com/projects" class="button services__button">View</a>
+            <a href="https://projects.brodynewell.com/" class="button services__button">View</a>
           </div>
 
           <div class="services__data">
             <i class="bx bx-notepad services__icon"></i>
             <h3 class="services__title">Changes</h3>
             <p class="services__description">
-              Come here to view all the changes I made to the site. This won't be updated too often, as I make a ton of changes every day.
+              Come here to view all the changes I made to the site. This is updated frequently, as I make tons of changes everyday. Use the branch navigation to see changes for other pages.
             </p>
-            <a href="https://brodynewell.com/changes" class="button services__button">View</a>
+            <a href="https://github.com/brodyn8/Personal-Website/" class="button services__button" target="_blank">View</a>
           </div>
         </div>
       </section>
@@ -242,7 +241,7 @@
             </div>
 
             <div>
-              <a href="https://brodynewell.com/contact" class="button button-white">Contact</a>
+              <a href="https://contact.brodynewell.com/" class="button button-white">Contact</a>
             </div>
           </div>
         </div>
@@ -252,7 +251,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__container rd-container">
-        <h1 class="footer__title">Brody Newell</h1>
+        <h1 class="footer__title">.com</h1>
         <p class="footer__description">Home</p>
         <p class="footer__copy">
           &#169 2021 
