--- a/404.html
+++ b/404.html
@@ -134,7 +134,7 @@
               >Home</a
             >
             <a
-              href="https://brodynewell.com/about"
+              href="https://about.brodynewell.com/"
               class="button home__button"
               aria-label="About"
               >About Me</a
