--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     />
     <meta name="robots" content="index" />
 
-    <title>Home | Brody Newell</title>
+    <title>Projects | Brody Newell</title>
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBT4MB7N3F">
@@ -80,23 +80,23 @@
             <li class="nav__item">
               <a
                 href="https://brodynewell.com/"
-                class="nav__link active-link"
+                class="nav__link"
                 aria-label="Home Tab"
                 >Home</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/about" class="nav__link" aria-label="About Tab"
+              <a href="https://about.brodynewell.com/" class="nav__link" aria-label="About Tab"
                 >About</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/resources" class="nav__link" aria-label="Resources Tab"
+              <a href="https://resources.brodynewell.com/" class="nav__link" aria-label="Resources Tab"
                 >Resources</a
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/games" class="nav__link" aria-label="Games Tab"
+              <a href="https://games.brodynewell.com/" class="nav__link" aria-label="Games Tab"
                 >Games</a
               >
             </li>
@@ -106,7 +106,7 @@
               >
             </li>
             <li class="nav__item">
-              <a href="https://brodynewell.com/contact" class="nav__link" aria-label="Contact Tab"
+              <a href="https://contact.brodynewell.com/" class="nav__link" aria-label="Contact Tab"
                 >Contact</a
               >
             </li>
@@ -124,17 +124,16 @@
       <section class="home" id="home">
         <div class="home__container rd-container rd-grid">
           <div class="home__data">
-            <span class="home__greeting">Hello, My name is</span>
-            <h1 class="home__name">Brody Newell</h1>
-            <span class="home__profession">Home</span>
+            <span class="home__greeting">brodynewell.com</span>
+            <h1 class="home__name">Projects</h1>
             <a
-              href="https://brodynewell.com/resources"
+              href="https://resources.brodynewell.com/"
               class="button home__button"
               aria-label="Resources"
               >Resources</a
             >
             <a
-              href="https://brodynewell.com/projects"
+              href="https://projects.brodynewell.com/"
               class="button home__button"
               aria-label="Projects"
               >Projects</a
@@ -149,102 +148,129 @@
         </div>
       </section>
 
-      <!-- About -->
-      <section class="about section rd-container" id="about">
-        <h2 class="section-title">Welcome</h2>
-
+<section class="portfolio section rd-container" id="portfolio-projects">
+        <h2 class="section-title">Resources</h2>
         <div class="divider-custom">
           <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon">
-            <i class="bx bx-question-mark"></i>
-          </div>
+          <div class="divider-custom-icon"><i class="bx bx-code-alt"></i></div>
           <div class="divider-custom-line"></div>
         </div>
 
-            <p class="home__description">
-              <a style="text-decoration:none" href="https://old.brodynewell.com/" target="_blank"><strong>Visit the old site here</strong></a><br><br>
-              I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about me page. If not, then check it out anyways because I'm pretty cool. Anyways, stop reading this and explore my site!
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Pages -->
-      <section class="pages section rd-container">
-        <h2 class="section-title">Pages</h2>
-        <span class="section-subtitle"
-          >There are many pages here that you might find useful.</span
-        >
-        <div class="divider-custom">
-          <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon">
-            <i class="fas fa-handshake"></i>
-          </div>
-          <div class="divider-custom-line"></div>
+        <div class="portfolio__nav">
+          <span class="portfolio__item active-portfolio" data-filter="all">All</span>
+          <span
+            class="portfolio__item"
+            data-filter=".games"
+            >Games</span
+          >
+          <span
+            class="portfolio__item"
+            data-filter=".sites"
+            >Websites</span
+          >
+          <span
+            class="portfolio__item"
+            data-filter=".useful"
+            >Other</span
+          >
         </div>
 
-        <div class="services__container rd-grid">
-          <div class="services__data">
-            <i class="bx bx-male services__icon"></i>
-            <h3 class="services__title">About Me</h3>
-            <p class="services__description">
-              Check this page out to learn all about me! That's really all there is to this page.
-            </p>
-            <a href="https://brodynewell.com/about" class="button services__button">View</a>
-          </div>
-          <div class="services__data">
-            <i class="bx bx-pencil services__icon"></i>
-            <h3 class="services__title">Resources</h3>
-            <p class="services__description">
-              I have many resources for classes you might have. From a scientific calculator to Quizlet sets, there are a range of resources for you to use. I add more all the time.
-            </p>
-            <a href="https://brodynewell.com/resources" class="button services__button">View</a>
-          </div>
-
-          <div class="services__data">
-            <i class="bx bx-game services__icon"></i>
-            <h3 class="services__title">Games</h3>
-            <p class="services__description">
-              Feeling bored? I got you covered. There are TONS of games to choose from. I have Tetris, Snake, UNO, and even... a chat box?
-            </p>
-            <a href="https://brodynewell.com/games" class="button services__button">View</a>
-          </div>
-
-          <div class="services__data">
-            <i class="bx bx-palette services__icon"></i>
-            <h3 class="services__title">Projects</h3>
-            <p class="services__description">
-              I created a few projects in the past, along with some I'm working on right now! Come here to view the ones in progress. You might also find PC games I'm working on.
-            </p>
-            <a href="https://brodynewell.com/projects" class="button services__button">View</a>
-          </div>
-
-          <div class="services__data">
-            <i class="bx bx-notepad services__icon"></i>
-            <h3 class="services__title">Changes</h3>
-            <p class="services__description">
-              Come here to view all the changes I made to the site. This won't be updated too often, as I make a ton of changes every day.
-            </p>
-            <a href="https://brodynewell.com/changes" class="button services__button">View</a>
-          </div>
-        </div>
-      </section>
-
-      <!-- Project in Mind -->
-      <section class="project section rd-container">
-        <div class="project__container rd-grid">
-          <div class="project__data">
-            <i class="bx bx-chat project__icon"></i>
-
-            <div>
-              <h2 class="project__title">Something in mind?</h2>
-              <p class="project__description">Contact Me for a suggestion</p>
-            </div>
-
-            <div>
-              <a href="https://brodynewell.com/contact" class="button button-white">Contact</a>
+        <div class="portfolio__container rd-grid">
+          <div class="portfolio__content mix useful swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">Dictionary</span>
+              <span class="portfolio__subtitle">
+                An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://dictionary.brodynewell.com/" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
             </div>
           </div>
+
+          <div class="portfolio__content mix useful swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">Calculator</span>
+              <span class="portfolio__subtitle">
+                A Scientific Calculator to help you with math. Click the screen to copy the answer.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://calculator.brodynewell.com/" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__content mix games swing">
+            <!--<img src="#" alt="Game Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">Golf</span>
+              <span class="portfolio__subtitle">
+                Minigolf, but on your computer. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://games.brodynewell.com/golf/play" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Play</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__content mix sites swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">My Website (Old Version Link)</span>
+              <span class="portfolio__subtitle">
+                I have worked on the website for over a year now. Ever since then, I have improved what I know and the looks and functionality of the site.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://old.brodynewell.com" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__content mix games swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">Space Defense</span>
+              <span class="portfolio__subtitle">
+                A PC game that was originally a side project. I don't work on it much anymore as I am working on another game. Made with Unity. If it asks for a password, use "<strong>download</strong>"
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://brodyn8.itch.io/space-defense" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
     </main>
@@ -252,11 +278,11 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__container rd-container">
-        <h1 class="footer__title">Brody Newell</h1>
-        <p class="footer__description">Home</p>
+        <h1 class="footer__title">.com</h1>
+        <p class="footer__description">Projects</p>
         <p class="footer__copy">
           &#169 2021 
-          <a href="https://brodynewell.com/" class="footer__link"
+          <a href="https://brodynewell.com" class="footer__link"
             >Brody Newell</a
           >
         </p>
