--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
             <li class="nav__item">
               <a
                 href="https://brodynewell.com/"
-                class="nav__link active-link"
+                class="nav__link"
                 aria-label="Home Tab"
                 >Home</a
               >
