--- a/golf/play.html
+++ b/golf/play.html
@@ -20,6 +20,7 @@
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
@@ -41,7 +42,7 @@
         codeUrl: buildUrl + "/MiniGolf.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Tenframe Games",
-        productName: "MiniGolf",
+        productName: "We Golf",
         productVersion: "1.0",
       };
 
