added drawing tool

--- a/index.html
+++ b/index.html
@@ -179,6 +179,25 @@
           <div class="portfolio__content mix useful swing">
             <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
             <div class="portfolio__data">
+              <span class="portfolio__title">Drawing Tool</span>
+              <span class="portfolio__subtitle">
+                A functional drawing tool for you to scribble and write text on. Right click to save and store your masterpiece while also being able to share it with others.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://draw.brodynewell.com/" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__content mix useful swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
               <span class="portfolio__title">Dictionary</span>
               <span class="portfolio__subtitle">
                 An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.
