--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </section>
 
 <section class="portfolio section rd-container" id="portfolio-projects">
-        <h2 class="section-title">Resources</h2>
+        <h2 class="section-title">Projects</h2>
         <div class="divider-custom">
           <div class="divider-custom-line"></div>
           <div class="divider-custom-icon"><i class="bx bx-code-alt"></i></div>
