--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<input type="text" id="input">
         <button class="btn">Search</button>
     </form>
-    <div class="board" font-family="'Poppins', sans-serif"></div>
+    <div class="board"></div>
   </section>
   <!--<div class="circle"></div>
   <div class="square"></div>
