added the 5th vocab list

--- a/index.html
+++ b/index.html
@@ -309,6 +309,25 @@
             </div>
           </div>
 
+          <div class="portfolio__content mix quizlet-e swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">English 1 Honors - Vocabulary List 5</span>
+              <span class="portfolio__subtitle">
+                A quizlet for Villasenor's 5th vocabulary list. 1st Semester.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="hhttps://quizlet.com/_ag71hh?x=1qqt&i=2852uv" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="portfolio__content mix quizlet-s swing">
             <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
             <div class="portfolio__data">
