--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               </span>
               <div class="portfolio__button-wrapper">
                 <div class="portfolio__button-run-icon">
-                  <a href="hhttps://quizlet.com/_ag71hh?x=1qqt&i=2852uv" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  <a href="https://quizlet.com/_ag71hh?x=1qqt&i=2852uv" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
                   </a>
                 </div>
                 <div class="portfolio__button-run-text">
