added golf and tether to projects

--- a/index.html
+++ b/index.html
@@ -234,6 +234,25 @@
           </div>
 
           <div class="portfolio__content mix games swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">Tether</span>
+              <span class="portfolio__subtitle">
+                A game about swinging a ball around and sheer destruction. There are achievements along with daily login streaks. You control a tether with your mouse but watch out for the other balls, as they can end your fun.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://projects.brodynewell.com/tether/play" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+          <div class="portfolio__content mix games swing">
             <!--<img src="#" alt="Game Icon" class="portfolio__img"/>-->
             <div class="portfolio__data">
               <span class="portfolio__title">Golf</span>
@@ -242,7 +261,7 @@
               </span>
               <div class="portfolio__button-wrapper">
                 <div class="portfolio__button-run-icon">
-                  <a href="https://games.brodynewell.com/golf/play" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  <a href="https://projects.brodynewell.com/golf/play" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
                   </a>
                 </div>
                 <div class="portfolio__button-run-text">
