removed golf from projects but added a new and improved tether

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
               </span>
               <div class="portfolio__button-wrapper">
                 <div class="portfolio__button-run-icon">
-                  <a href="https://projects.brodynewell.com/golf/play" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  <a href="https://games.brodynewell.com/golf/play" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
                   </a>
                 </div>
                 <div class="portfolio__button-run-text">
