--- a/404.html
+++ b/404.html
@@ -96,6 +96,11 @@
               >
             </li>
             <li class="nav__item">
+              <a href="https://projects.brodynewell.com/" class="nav__link" aria-label="Projects Tab"
+                >Projects</a
+              >
+            </li>
+            <li class="nav__item">
               <a href="https://games.brodynewell.com/" class="nav__link" aria-label="Games Tab"
                 >Games</a
               >
