--- a/index.html
+++ b/index.html
@@ -248,6 +248,25 @@
           </div>
 
           <div class="portfolio__content mix recommended swing">
+            <!--<img src="#" alt="Icon" class="portfolio__img"/>-->
+            <div class="portfolio__data">
+              <span class="portfolio__title">Tether</span>
+              <span class="portfolio__subtitle">
+                A game about swinging a ball around and sheer destruction. There are achievements along with daily login streaks. You control a tether with your mouse but watch out for the other balls, as they can end your fun.
+              </span>
+              <div class="portfolio__button-wrapper">
+                <div class="portfolio__button-run-icon">
+                  <a href="https://games.brodynewell.com/tether/play" target="_blank" aria-label="Play" ><i class="bx bx-right-arrow portfolio__button portfolio__button-icon"></i>
+                  </a>
+                </div>
+                <div class="portfolio__button-run-text">
+                  <a href="#" class="portfolio__button portfolio__button-text">Go</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__content mix recommended swing">
             <!--<img src="#" alt="Game Icon" class="portfolio__img"/>-->
             <div class="portfolio__data">
               <span class="portfolio__title">MicroFPS</span>
