--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             <p class="home__description">
               <strong>Important -</strong>
-              <br>I want to let you know that I'm working on the newer version of the website so it is more user friendly and clean. Give me a couple of weeks or so because this one I'm completely starting from scratch. There will be the same projects and games, but just a redone website. Everything shouldn't be blocked and It'll look nice.<br><i> Also, Will if you're reading this, I'm working on the community right after I finish the new design.</i><br>-<br>
+              <br>I want to let you know that I'm working on the newer version of the website so it is more user friendly and clean. Give me a couple of weeks or so because this one I'm completely starting from scratch. There will be the same projects and games, but just a redone website. Everything shouldn't be blocked and it'll look nice.<br><i> Also, Will if you're reading this, I'm working on the community right after I finish the new design.</i><br>-<br>
               <a style="text-decoration:none" href="https://old.brodynewell.com/" target="_blank"><strong>Visit the old site here</strong></a><br><br>
               I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about me page. If not, then check it out anyways because I'm pretty cool. Anyways, stop reading this and explore my site!
             </p>
